@@ -40,4 +40,4 @@ EXTRA_DIST = test1 test108 test117 test127 test20 test27 test34 test46	   \
  test286 test307 test308 test287 test400 test288 test600 test601 test602   \
  test603 test401 test402 test290 test291 test292 test293 test403 test404   \
  test405 test604 test605 test606 test607 test608 test609 test294 test295   \
- test296 test297 test298
+ test296 test297 test298 test610 test611 test612
